Pre-release: JS, LDAP, Command encoders